# GL

./: .gitmodules  CMakeLists.txt
include/: glrenderer.h  shader.h  texture.h  types.h  utils.h  window.h
shaders/: fragv1.glsl  fragv2.glsl  tex_frag.glsl  vertv1.glsl  vertv2.glsl
src/: glrenderer.cc  main.cc  shader.cc  texture.cc  utils.cc  window.cc
